# fauth

./: LICENSE  README.md  pyproject.toml
auth_service/: config.py  main.py  models.py  security.py  token_store.py  users.py
config/: private_key.pem  public_key.pem  users.toml
frontend/: app.js  index.html  styles.css
protected_service/: config.py  main.py  verifier.py
tests/: test_auth_flow.py
